@@ -18,14 +18,9 @@ require_once(SM_PATH . 'functions/global.php');
 sqgetGlobalVar('prefs_cache', $prefs_cache, SQ_SESSION );
 sqgetGlobalVar('prefs_are_cached', $prefs_are_cached, SQ_SESSION );
 
-$rg = ini_get('register_globals');
-
-/* if php version >= 4.1 OR (4.0 AND $rg = off) */
 if ( !sqsession_is_registered('prefs_are_cached') ||
      !isset( $prefs_cache) ||
-     !is_array( $prefs_cache) ||
-     check_php_version(4,1) ||
-     empty($rg)
+     !is_array( $prefs_cache) 
    ) {
     $prefs_are_cached = false;
     $prefs_cache = array();
