@@ -24,6 +24,7 @@ Version 1.5.1 -- CVS
     functionality added to core in 1.5.0.
   - Fix test for LOGINDISABLED, should only test when the auth_mech actually
     is 'login'.
+  - Update required PHP version to 4.1.0, and remove PHP 4.0.x legacy code.
 
 Version 1.5.0
 --------------------
